--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
 
     <body>
         <div id="banner"></div>
-        <div id="Mensaje">Bienvenido Gamer</div>
+        <div id="mensajito">Bienvenido gamer</div>
+            <div id="sumatoria">
+            <div id="primer_sumando">1.55</div>
+            <div id="segundo_sumando">1.55</div>
+            <div id="resultado">
+                <button onclick="calcular('primer_sumando','segundo_sumando','salidita');">CALCULAR</button>
+                <output id="salidita"></output>
+            </div>
+        <button onclick="crearElemento();">Crear Elemento</button>
+        <div id="lienzo">
+
+        </div>
         <script src="js/script.js"></script>
     </body>
 </html>
